# MSCore

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/reference/: index.md  setup.md
docs/tutorials/: index.md  setup_app.md
ms_core/: __init__.py  setup.py
ms_core/bases/: __init__.py  abstract_model.py  base_crud.py  base_crud_router.py  i18n_crud.py  i18n_model.py
tests/: test.py
tests/cruds/: crud1.py  crud2.py
tests/models/: test1.py  test2.py
tests/routers/: test.py  test1.py  test2.py
